<resources>
    <string name="app_name">BMI Calculator</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="calculate">Calculate</string>
    <string name="settings">Settings</string>
    <string name="enter_the_height">Enter the height in cm: </string>
    <string name="enter_the_weight">Enter the weight in kg: </string>
    <string name="dark_mode">Dark Mode</string>
    <string name="toggle">SWITCH</string>
    <string name="displayText">Display Message</string>
    <string name="toggle2">SWITCH</string>
</resources>
